Vectorized GravityDown