@@ -45,9 +45,9 @@ java {
 tasks.withType(JavaCompile).configureEach {
 	options.compilerArgs << '-Xdiags:verbose'
 	options.compilerArgs << '-Xlint:all'
-	options.compilerArgs << '-Werror'
 	options.deprecation = true
 	options.encoding = 'UTF-8'
+	options.compilerArgs << '--add-modules' << 'jdk.incubator.vector'
 }
 
 test {
